# Vanadium

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  build-python.sh  build.gradle  build.gradle.kts  build.gradle.old  build.properties  pyproject.toml  requirements.txt  settings.gradle  settings.gradle.kts  setup.py
gradle/: libs.versions.toml
python/: .gitignore  .pypirc  __init__.py  build.sh  pyproject.toml  setup.py
spec/: colors.tex  colors_dark.tex  macros.tex  specification_v1.tex
spec/v1/: appendix.tex  builtin_types.tex  introduction.tex  user_defined_types.tex  wording.tex
src/commonMain/kotlin/io/karma/vanadium/: Dummy.kt
src/main/antlr/: FerrousLexer.g4  FerrousLexer.tokens  FerrousParser.g4
vanadium/: .gitignore  __init__.py
