[build-system]
requires = [
    "setuptools>=61.0",
    "twine>=5.1.1",
    "antlr4-python3-runtime>=4.13.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "vanadium"
dynamic = ["version"]
authors = [
    { name="Karma Krafts", email="support@karmakrafts.dev" },
]
description = "An ANTLRv4 based lexer/parser frontend for the Ferrous programming language."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {}